--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,11 @@
   "name": "open-react-template",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "cheeseburger-menu": "0.0.13",
     "classnames": "^2.2.6",
     "emailjs-com": "^2.4.1",
     "firebase": "^7.16.0",
@@ -14,6 +16,7 @@
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.5.1"
